Fixes logo resolution on small screens

--- a/assets/css/patch.css
+++ b/assets/css/patch.css
@@ -249,6 +249,7 @@ body.posts .modBlogPost.big p {
 
 .top-bar .title-area .name h1 a {
   color: #efefef;
+  width: 100%;
 }
 
 .modBlogPost img {
